apps/dashboard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-dashboard
  namespace: nonprod
  labels:
    app: homelab-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-dashboard
  template:
    metadata:
      labels:
        app: homelab-dashboard
    spec:
      containers:
        - name: homelab-dashboard
          image: 970547335250.dkr.ecr.ap-south-1.amazonaws.com/homelab-dashboard:v1.2
          # image: nginx:alpine
          ports:
            - containerPort: 80
