apps/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-dashboard
  namespace: nonprod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: homelab.deploywizard.in     # change to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-dashboard
                port:
                  number: 80
